# orbitgrasp

./: .dockerignore  .gitignore  Dockerfile  README.md  conda_environment.yaml
models/equiformer_v2/: wigner.py
orbit-grasp-inference-api-client/: README.md  pyproject.toml
orbit-grasp-inference-api-client/orbit_grasp_inference_api_client/: __init__.py
orbit-grasp-inference-api-client/orbit_grasp_inference_api_client/api/default/: read_root_get.py
orbit-grasp-inference-api-client/orbit_grasp_inference_api_client/api/inference/: detect_grasp_detect_post.py
orbit-grasp-inference-api-client/orbit_grasp_inference_api_client/models/: __init__.py  detect_request.py  detect_response.py
scripts/: grasp_from_pcd.py  orbitgrasp_server.py  se3_grasper_bce.py  single_config.yaml  test_openapi_client.py
scripts/orbitgrasp_inference/: config.py  geometry.py  pipeline.py  pointcloud.py  visualization.py
